@@ -1,3 +1,9 @@
+2004-06-05  Jorn Baayen  <jbaayen@gnome.org>
+
+	* src/Song.cs:
+
+	Add a comment explaining the AlbumKey stuff.
+
 2004-06-05  Edd Dumbill <edd@usefulinc.com>
 
 	* src/DashboardFrontend.cs:
